Correccion bug de estilo mobile overflow x hidden

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -18,7 +18,7 @@
 *,*::after {
     margin: 0;
     max-width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 a {
     text-decoration: none;
